RESOLVED FIXED136598
[WinCairo][Curl] fileExists() incorrectly claims folder does not exist.
https://bugs.webkit.org/show_bug.cgi?id=136598
Summary [WinCairo][Curl] fileExists() incorrectly claims folder does not exist.
peavo
Reported 2014-09-06 04:22:10 PDT
When the fileExists() function is called in CurlCacheManager::setCacheDirectory() with a folder name ending with a slash or backslash, it will always return false, even if the folder exists. See the documentation of FindFirstFile (http://msdn.microsoft.com/en-us/library/windows/desktop/aa364418(v=vs.85).aspx), where it's stated that it will fail if the file name ends with a backslash.
Attachments
Patch (1.58 KB, patch)
2014-09-06 04:26 PDT, peavo
no flags
peavo
Comment 1 2014-09-06 04:26:37 PDT
WebKit Commit Bot
Comment 2 2014-09-06 10:03:03 PDT
Comment on attachment 237733 [details] Patch Clearing flags on attachment: 237733 Committed r173358: <http://trac.webkit.org/changeset/173358>
WebKit Commit Bot
Comment 3 2014-09-06 10:03:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.