[WinCairo][Curl] fileExists() incorrectly claims folder does not exist. https://bugs.webkit.org/show_bug.cgi?id=136598

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-09-06
Reviewed by Alex Christensen.

The fileExists() function will always return false on Windows,
if the filename parameter ends with a slash or backslash.

* platform/network/curl/CurlCacheManager.cpp:
(WebCore::CurlCacheManager::setCacheDirectory): Add slash after call to fileExists().

Canonical link: https://commits.webkit.org/154420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173358 268f45cc-cd09-0410-ab3c-d52691b4dbfc